k8s-samples/nyumon/sample-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx
        image: gihyodocker/nginx-proxy:latest
        ports:
        - containerPort: 80
      - name: echo
        image: gihyodocker/echo:pacthed
        ports:
        - containerPort: 8080
